--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+html {scroll-behavior: smooth;}
+
 * {box-sizing: border-box; margin: 0px; padding:0px; list-style: none;}
 body {padding: 0px; margin: 0px;}
 
@@ -15,14 +17,42 @@ header, nav, hgroup, section, article, aside, figure, figcaption, audio, video, 
 /* html start here */
 
 .wrap {width: 1200px; margin: 0 auto;}
+.befor-hedline {text-align: left; font: normal normal bold 35px/46px DM Sans; letter-spacing: -1.05px; color: #EAAA37;}
+.befor-hedline2 {text-align: center;  font: normal normal 300 25px/45px Lato; letter-spacing: 0px; padding-bottom: 10px; text-align: center;}
+.headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; text-align: center;}
+.headline2 { font: normal normal bold 50px/80px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; text-align: center;}
+.headline2-left { font: normal normal bold 50px/80px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; }
+.sub-healine {text-align: left; font-size: 25px; letter-spacing: 0px; color: #2E2E2E; font-family:lato; line-height: 30px; font-weight: normal;}
+ .white-sub-heading {text-align: left; font-size: 25px; letter-spacing: 0px; color: #FFFFFF; font-family:lato; line-height: 30px; font-weight: normal;}
+
+
+
+.line {border: 2px solid #EAAA37;width: 150px; height: 8px; background: #EAAA37; border-radius: 10px; margin: 18px 0; display: inline-block;}
+.line-center {border: 2px solid #EAAA37;width: 150px; height: 8px; background: #EAAA37; border-radius: 10px; margin: 30px auto; text-align: center!important;display:inline-block }
+
+.pera {text-align: left; font: normal normal normal 18px/28px Lato; letter-spacing: 0px; color: #2E2E2E; padding-top: 50px;}
+
+.coloum { column-count: 2;
+    column-gap: 68px;}
+
+.white-headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #FFFFFF;}
+.white-sub-heading {text-align: left; font-size: 25px; letter-spacing: 0px; color: #FFFFFF; font-family:lato; line-height: 30px; font-weight: normal;}
+.white-pera {text-align: left;font: normal normal 300 20px/28px Lato; letter-spacing: 0px; color: #ffffff; padding-top: 50px;}
+
+
+
 
 /*********************** nav start***********************/
 
 
-#nav {background:none; position: absolute; top:0 ; left: 0;z-index: 999; width: 100%; }
+#nav {background:none; position: absolute; top:0 ; left: 0;z-index: 999; width: 100%;}
 .logo {background: #FFFFFF 0% 0% no-repeat padding-box; box-shadow: 0px 1px 3px #00000017; border-radius:0 0 100px 100px;opacity: 1;width: 200px;height: 217px; position: absolute; left:50%; margin-left: -100px; display: flex; justify-content: center; align-items: center;}
 .logo img {text-align: center;display: inline-block;}
-.hader-nav { width: 100%; }
+
+
+.logo2 {background: #FFFFFF 0% 0% no-repeat padding-box; box-shadow: 0px 1px 3px #00000017; border-radius:0 0 100px 100px;opacity: 1;width: 200px;height: 217px; position: absolute; left:50%; margin-left: -100px; display: flex; justify-content: center; align-items: center;}
+.logo2 img {text-align: center;display: inline-block;}
+.hader-nav { width: 100%;  top: 100%; }
 .hader-nav ul { margin: 0 0 0 0; padding: 50px 0 0 0; text-align: right; }
 .hader-nav ul li {float:none ; display: inline-block; }
 .hader-nav ul li:nth-child(1) {float:left ;  }
@@ -34,7 +64,7 @@ header, nav, hgroup, section, article, aside, figure, figcaption, audio, video, 
 text-transform: uppercase; opacity: 1; display:inline-block; padding: 20px; border-bottom:3px solid transparent;
 opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s ease;}
 
-.hader-nav ul li a:hover{ border-bottom:3px solid #EAAA37;background:#004AAD;border-radius: 25px 0px 0px 0px;}
+.hader-nav ul li a:hover{ border-bottom:3px solid #EAAA37;background:#004AAD;border-radius: 25px  0px 0px 0px;}
 .contact-btn {background:#EAAA37!important}
 
 /* .hader-nav ul li a:active{ border-bottom:3px solid #EAAA37;background:#004AAD;border-radius: 25px 0px 0px 0px;}
@@ -42,7 +72,9 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 .hader-nav ul li a.active{ border-bottom:3px solid #EAAA37;background:#004AAD;border-radius: 25px 0px 0px 0px;}
 .contact-btn {background:#EAAA37!important}
-
+#menu-bar {display: none;}
+.respnse {font-size: 50px; color:#fff; cursor: pointer;  display: none; float: right; transform: translateY(30px);}
+/* .respnse {} */
 
 /***********************nav end***********************/
 
@@ -52,8 +84,8 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 #banner-id {background:url(../images/banner.png) center top no-repeat;  position: relative; background-size:cover;border-radius: 0px 0px 250px 0px; }
 
-.banner { height: 100vh; text-align: center; display: flex; justify-content: center; align-items:center}
-.banner-content { width: auto;}
+.banner { height: 1000px; text-align: center; display: flex; justify-content: center; align-items:center}
+.banner-content { width: auto; }
 .banner-content a {background: #004AAD ;border-radius: 25px 0px;font: normal normal bold 21px/28px DM Sans;
     letter-spacing: 0px;color: #FFFFFF; padding: 20px; display: inline-block; }
 
@@ -81,28 +113,6 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 .vision-second h2 span { font: normal normal bold 25px/35px Lato;}
 
 
-.befor-hedline {text-align: left; font: normal normal bold 35px/46px DM Sans; letter-spacing: -1.05px; color: #EAAA37;}
-.befor-hedline2 {text-align: center;  font: normal normal 300 25px/45px Lato; letter-spacing: 0px; padding-bottom: 10px; text-align: center;}
-.headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; text-align: center;}
-.headline2 { font: normal normal bold 50px/80px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; text-align: center;}
-.headline2-left { font: normal normal bold 50px/80px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; }
-.sub-healine {text-align: left; font-size: 25px; letter-spacing: 0px; color: #2E2E2E; font-family:lato; line-height: 30px; font-weight: normal;}
- .white-sub-heading {text-align: left; font-size: 25px; letter-spacing: 0px; color: #FFFFFF; font-family:lato; line-height: 30px; font-weight: normal;}
-
-
-
-.line {border: 2px solid #EAAA37;width: 150px; height: 8px; background: #EAAA37; border-radius: 10px; margin: 18px 0; display: inline-block;}
-.line-center {border: 2px solid #EAAA37;width: 150px; height: 8px; background: #EAAA37; border-radius: 10px; margin: 30px auto; text-align: center!important;display:inline-block }
-
-.pera {text-align: left; font: normal normal normal 18px/28px Lato; letter-spacing: 0px; color: #2E2E2E; padding-top: 50px;}
-
-.coloum { column-count: 2;
-    column-gap: 68px;}
-
-.white-headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #FFFFFF;}
-.white-sub-heading {text-align: left; font-size: 25px; letter-spacing: 0px; color: #FFFFFF; font-family:lato; line-height: 30px; font-weight: normal;}
-.white-pera {text-align: left;font: normal normal 300 20px/28px Lato; letter-spacing: 0px; color: #ffffff; padding-top: 50px;}
-
 /*********************** vision end***********************/
 
 /*********************** about end***********************/
@@ -126,7 +136,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 
 /*********************** who start***********************/
-#who-id {width: 100%;}
+#who-id {width: 100%; }
 .who {width: 100%; text-align: center; }
 .who-content {width: 100%;  display: flex; justify-content: center; }
 .who-content-left {width: 50%; }
@@ -147,11 +157,11 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 /*********************** team start***********************/
 #team-id {width: 100%;}
 .team {width: 100%; text-align: center; padding-bottom: 50px;}
-.our-team {width: 100%; display: flex; justify-content: center; }
+.our-team {width: 100%; display: flex; justify-content: center;  flex-direction: row; }
 .our-team-card {width: 20%; background: #373737; border:#a7a7a714 solid 2px; height: 572px; display: flex; justify-content: center;  }
 .our-team-card-content {width: 100%; background: #373737; border:#a7a7a714 solid 0px; height: 572px; padding: 53px 34px;text-align: center;display: inline-block;  }
 .team-img {background: #FFF8EB 0% 0% no-repeat padding-box;width: 213px; height: 213px; border-radius:200px;  display: inline-flex; justify-content: center; align-items:center ; text-align: center; }
-.team-img  img {}
+.team-img  img {width: auto;}
 .our-team-card-content h1 {text-align: center; font: normal normal bold 20px/26px DM Sans; letter-spacing: -0.6px; color: #EAAA37; padding-top: 20px; }
 
 .our-team-card-content h2 {text-align: center;  font: normal normal normal 15px/45px Lato; letter-spacing: 0px; color: #FFFFFF;}
@@ -168,9 +178,9 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 #manager-id {width: 100%; padding:50px 0; position: relative;}
 .manager {width: 100%; padding:80px 0; text-align: center;}
 .mark-bg {position: absolute; bottom:0; right: 0; z-index: -1;}
-.product {width: 100%;display: flex; justify-content: start; align-items :center; flex-wrap: wrap; flex-direction: row; justify-items: center;}
+.product {width: 100%;display: flex; justify-content: start; align-items :center; flex-wrap: wrap;}
 .product-card {background: #fff;  box-shadow: 0px 2px 3px #00000014;  border: 1px solid #92929233; border-radius: 0px 0px 0px 36px; width: 285px; height: 342px; padding: 40px 54px; margin: 5px; }
-.product-content {}
+.product-content { width: auto;}
 .product-card h1 {text-align: center; font: normal normal bold 20px/27px DM Sans; letter-spacing: 0px; color: #2E2E2E; padding-top: 20px;}
 .product-card p {text-align: center; font: normal normal normal 13px/27px Lato; letter-spacing: 0px; color: #2E2E2E;}
 .product-img {background: #FFF8EB 0% 0% no-repeat padding-box;width: 176px; height: 176px; border-radius:200px;  display: inline-flex; justify-content: center; align-items:center ; text-align: center; }
@@ -182,6 +192,10 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 #featured-id {width: 100%;border-radius: 0px 0px 0px 250px; background:#f7f7f7; padding:150px 0}
 .featured {width: 100%; display: flex; justify-content: space-between; align-items: center; }
 .featured-left {width: 40%;}
+
+
+.slid {width: 100%; float: left; position:absolute; left: 0; top: 0; width: 400px; }
+
 
 .slide-show {width:50% ; display: flex; justify-content: end;}
 .slide-card {background: transparent url('img/Rectangle 50.png') 0% 0% no-repeat padding-box; box-shadow: 0px 2px 3px #00000014; border-radius: 0px 0px 0px 36px;width: 314px; height: 342px; margin:20px; display: inline-flex; justify-content: center; padding: 40px; position: relative;  }
@@ -240,6 +254,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 
 
+
 /* .btn-right-send  {width: 223px; height: 60px; line-height: 60px;background: #EAAA37 0% 0% no-repeat padding-box;font: normal normal bold 15px/18px Lato;
     letter-spacing: 0px;
     color: #FFFFFF;
@@ -250,7 +265,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 
 /*********************** footer end***********************/
-#footer-id {width: 100%; background: #012B64 0% 0% no-repeat padding-box; float: left;}
+#footer-id {width: 100%; background: #012B64 0% 0% no-repeat padding-box; float: left; padding-bottom: 70px;}
 .footer {width: 100%; float: left; display: flex; justify-content: center; border-bottom:solid 1px rgba(255, 255, 255, 0.192); padding-bottom: 70px; }
 .footer-left {width: 30%; }
 .footer-box {width: 50%; padding: 70px 0; float: left; }
@@ -268,17 +283,65 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 
 
-.footer-right {width: 30%; }
+.footer-right {width: 30%; float: left;}
 
-.footer-address {width: 100%;float: left; padding-top: 70px; }
-.footer-address-left {width: 20%;}
+.footer-address {width: 100%;float: left; padding-top: 70px; display: flex;  justify-content: space-between;align-items: flex-start;}
+.footer-address-left {width: auto; float: left;}
 .footer-address-left  h1 {text-align: left; font: normal normal bold 20px/45px DM Sans; letter-spacing: 0px; color: #EAAA37; text-transform: uppercase; }
 
-.footer-address-right {width: 30%;}
+.footer-address-right {width: 30%; float: left;}
+.footer-flag {width: 40%;float: left;display: flex; justify-content: space-between;}
+.flag-add {width: 15%;  }
+.footer-flag-add {width: 85%;float: left;}
+.footer-flag-add-top {width: 100%;float: left; display: flex; justify-content: space-between;   padding-bottom:30px}
+.footer-flag-add-top i {font-size: 20px; color:#EAAA37; margin-right: 8px;}
+.footer-flag-add-top p {text-align: left; font: normal normal normal 15px/20px Lato; letter-spacing: 0px; color: #FFFFFF;}
+.flag-contact { width: 100%; float: left; }
+.flag-contact ul { list-style: none; margin: 0px; padding: 0px;  }
+.flag-contact ul li {float: left!important; padding-bottom: 9px; margin-left: 25px;}
+.flag-contact ul li a { font: normal normal normal 15px/20px Lato; letter-spacing: 0px; color: #FFFFFF; }
+.flag-contact ul li i {font-size: 20px; color:#EAAA37; margin-right: 8px;}
+
+
+
+
+
 
 .hide {visibility:hidden;}
 
 /*********************** footer end***********************/
 
+
+/* back to top */
+#scroll {
+    position:fixed;
+    right:10px;
+    bottom:10px;
+    cursor:pointer;
+    width:50px;
+    height:50px;
+    background-color:#3498db;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:60px
+}
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
+}
+#scroll:hover {
+    background-color:#EAAA37;
+    opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
+}
 
 
