--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,11 @@ header, nav, hgroup, section, article, aside, figure, figcaption, audio, video, 
 .headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; text-align: center;}
 .headline2 { font: normal normal bold 50px/80px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; text-align: center;}
 .headline2-left { font: normal normal bold 50px/80px DM Sans; letter-spacing: -2.1px; color: #2E2E2E; }
-.sub-healine {text-align: left; font-size: 25px; letter-spacing: 0px; color: #2E2E2E; font-family:lato; line-height: 30px; font-weight: normal;}
+.sub-healine {text-align:center; font-size: 25px; letter-spacing: 0px; color: #2E2E2E; font-family:lato; line-height: 30px; font-weight: normal;}
  .white-sub-heading {text-align: left; font-size: 25px; letter-spacing: 0px; color: #FFFFFF; font-family:lato; line-height: 30px; font-weight: normal;}
 
-.font-style {font-family:myFirstFont!important; font-size: 40px!important; font-weight: 100!important; border:solid 3px #004AAD!important;padding-top: 40px!important; display: inline-block!important;}
-.font-style-2 {font-family:Arial, Helvetica, sans-serif; padding-top: 20px; font-size: 20px!important; }
+.font-style {font-family:myFirstFont!important; font-size: 30px!important; font-weight: 100!important; border:solid 3px #004AAD!important; display: inline-block!important; }
+.font-style-2 {font-family:Arial, Helvetica, sans-serif;  font-size: 30px!important; padding-bottom: 20px; text-transform: uppercase;}
 .right {float: right;}
 
 .white-text { text-align: left;font: normal normal 300  25px/35px Lato;letter-spacing: 0px;color: #FFFFFF; padding-top: 20px;}
@@ -44,7 +44,7 @@ header, nav, hgroup, section, article, aside, figure, figcaption, audio, video, 
 .coloum { column-count: 2;
     column-gap: 68px;}
 
-.white-headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #FFFFFF;}
+.white-headline { font: normal normal bold 70px/81px DM Sans; letter-spacing: -2.1px; color: #FFFFFF; text-align: ;}
 .white-sub-heading {text-align: left; font-size: 25px; letter-spacing: 0px; color: #FFFFFF; font-family:lato; line-height: 30px; font-weight: normal;}
 .white-pera {text-align: left;font: normal normal 300 20px/28px Lato; letter-spacing: 0px; color: #ffffff; padding-top: 50px;}
 
@@ -157,7 +157,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 /*********************** who start***********************/
 #who-id {width: 100%;  }
 .who {width: 100%; text-align: center; }
-.who-content {width: 100%;  display: flex; justify-content: center; }
+.who-content {width: 100%;  display: flex; justify-content: center;  padding-top: 80px;}
 .who-content-left {width: 50%;}
 .who-content-left img {object-fit: cover; width: 100%; height: 100%; }
 .who-content-right {width: 50%; background: #012B64;display: block; padding: 150px 180px; display:flex; justify-content: center; align-items:center; position: relative;}
@@ -189,7 +189,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 .our-team-card-content ul {list-style: none; margin: 0px; padding: 25px 0 0 0;}
 .our-team-card-content ul li  {float: none; padding: 5px 0; }
 .our-team-card-content ul li  a {text-align: center; font: normal normal normal 13px/20px Lato;  letter-spacing: 0px; color: #B2B2B2;}
-
+.width {width: 100%!important; transform: scale(1.1, 1.1);}
 
 /*********************** team end***********************/
 
@@ -229,7 +229,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 .slide-card {background: #fff url('img/Rectangle 50.png') 0% 0% no-repeat padding-box; box-shadow: 0px 2px 3px #00000014; border-radius: 0px 0px 0px 36px;width: 314px; height: 342px; margin:20px; display: inline-flex; justify-content: center; padding: 40px; position: relative;  }
 .slide-product  {width: auto; text-align: center; ;}
 .slide-product img {  width: auto;}
-.slide-product h1 { text-align: center; font: normal normal bold 20px/27px Lato; letter-spacing: 0px; color: #2E2E2E; padding-top: 30px;}
+.slide-product h1 { text-align: center; font: normal normal bold 20px/27px Lato; letter-spacing: 0px; color: #2E2E2E; padding-top: 30px;position: absolute; bottom:40px; left: 0; right: 0; }
 
 .next-btn {position: absolute; top: 50%; left: -30px; background: #929292 0% 0% no-repeat padding-box;
     box-shadow: 0px 2px 3px #00000014;width: 58px;height: 58px; border-radius: 100px; margin-top: -20px; line-height:58px; text-align: center; }
@@ -241,7 +241,7 @@ opacity: 1;background:none;border-radius: 25px 0px 0px 0px; transition: all 0.5s
 
 
 /* slide */
-.slide-position {width: 60%; position: absolute; top:25%; right: 0;  }
+.slide-position {width: 55%; position: absolute; top:25%; right: 0;  }
 .main-carousel {width: 100%;position:initial !important;}
 .slide-show {width:100% ; display: flex; justify-content: end; position: relative; height: 400px;}
 .flickity-enabled {position:initial !important;;}
@@ -394,4 +394,29 @@ element  {transform:translateX(0%)!important; position:initial!important;}
     -ms-filter:"alpha(opacity=100)";
 }
 
+
+label#agree-error {
+    position: absolute;
+    margin-top: 48px;
+}
+.error {
+    color: red;
+}
+#whatsappicon {
+    position: fixed;
+    right: 10px;
+    bottom: 9px;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    /* background-color: #3498db; */
+    /* text-indent: -9999px; */
+    display: none;
+    -webkit-border-radius: 60px;
+    -moz-border-radius: 60px;
+    border-radius: 60px;
+    z-index: 999;
+}
+#whatsappicon img {transform: rotate(270deg);}
+#scroll { bottom: 100px !important};
 
